style.css
/* Align container horizontally and set its space */
.container {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: center;
    width: 960px;
    height: 960px;
    margin: 0 auto;
    margin-top: 50px;
    margin-bottom: 50px;
}

/* Insert every grid-item inside the container */
.grid-item {
    box-sizing: border-box;
    border: 2px solid white;
}

/* Center button and make it look better */
button {
    display: block;
    box-sizing: content-box;
    width: 220px;
    height: 90px;
    margin: 0 auto;
    font-family: 'Press Start 2P', Courier, monospace;
    font-weight: bold;
    font-size: large;
    color: white;
    background-color: gray;
    border: 4px outset black;
    border-radius: 15%;
    line-height: 1.5;
}

body {
    background-color: #1A2B3C;
}

.text {
    font-family: 'Press Start 2P', Courier, monospace;
    font-weight: bold;
    font-size: 50px;
    color: white;
    text-align: center;
}

.header {
    width: 100%;
    padding: 50px 0;
    background-color: blueviolet;
}

